# blogpy

./: main.py  pyproject.toml  schemas.py  send_email.py
routes/: login.py  register.py  users.py
utils/: oauth2.py
