[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.119.0",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pwdlib[argon2]>=0.2.1",
    "pydantic[email]>=2.12.3",
]
